# pyproject.toml (place this in the root of your pyekfmm fork/clone)
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy>=1.19.0"  # Or a version compatible with pyekfmm and your Python version
]
build-backend = "setuptools.build_meta"
backend-path = ["."] # Default, indicates setup.py and build backend are in the project root
