# pyproject.toml (in the root of your pyekfmm fork)
[build-system]
requires = [
    "setuptools>=42",  # Ensures setuptools itself is installed
    "wheel",           # Required for building wheels
    "numpy>=1.19.0"    # Needed for your C extensions (adjust version as needed)
]
build-backend = "setuptools.build_meta"
backend-path = ["."]
